[package]
name = "reverse-proxy-docker-mgmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
bollard = "0.14.0"
reqwest = "0.11.16"
rusqlite = "0.29.0"
serde = "1.0.160"
serde_json = "1.0.95"
